# V1R4

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  setup.sh  uninstall.sh  vite.config.ts
.github/workflows/: codeql.yml
docs/: example-claude-md.md
docs/superpowers/plans/: 2026-03-20-decouple-audio-playback.md
docs/superpowers/specs/: 2026-03-20-decouple-audio-playback-design.md
server/: .env.example  README.md  pyproject.toml
server/hooks/: hooks.json.example  notify.sh  status.sh
server/scripts/: install.sh  latency-report.sh  recording-off.sh  recording-on.sh  start.sh  stop.sh  uninstall.sh
server/service/: com.claude-voice.tts.plist
server/src/claude_voice/: __init__.py  alert_cache.py  audio_player.py  pipeline.py  server.py  tts_engine.py
server/tests/: test_alert_cache.py  test_audio_player.py  test_integration.py  test_pipeline.py  test_server.py  test_tts_engine.py
src/: audio-player.ts  avatar.ts  background.ts  body.ts  expressions.ts  hands.ts  idle.ts  lipsync.ts  main.ts  noise.ts  overlay-effects.ts  scene.ts  spring.ts  state.ts  style.css  wind.ts  ws-client.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: expressions.test.ts  state.test.ts  ws-client.test.ts
