[project]
name = "claude-voice-hooks"
version = "0.3.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "kokoro>=0.9.4",
    "soundfile>=0.13.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "pythainlp>=5.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = ["integration: end-to-end tests requiring model and audio device"]
